Provides scripted plugin and its settings